hphp/test/zend/bad/Zend/tests/magic_methods_002.php
<?php

class foo {	
	private function __unset($a) {
		print "unset\n";
	}
}

?>